# snitch-env

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  LICENSE  README.md  client.py  models.py  openenv.yaml  openenv_config.yaml  pyproject.toml  requirements.txt  server.py  validation.sh
blog/: snitch_overseer.md  the_snitch_hf.md
data/: eval_traces.jsonl  questions.json  train_traces.jsonl  training_log.json  training_log_smoketest.json
doers/: __init__.py  base.py  deceiver.py  honest.py  lazy.py  reward_hacker.py
env/: __init__.py  parse.py  reward.py  snitch_env.py  trace_format.py
notebooks/: demo.ipynb  snitch_train_demo.ipynb  snitch_train_full_proof.ipynb
results/: confusion.json  data_split_verification.txt  eval_base_3shot.json  eval_base_full120.json  eval_gpt4o_n120.json  eval_gpt4omini_n120.json  eval_gpt4omini_pilot5.json  eval_llama31_8b_n120.json  eval_lora_lr2e5_400.json  eval_old_ckpt_n120.json  eval_qwen25_7b_n120.json  gen_gap_step300.json
scripts/: dump_confusion.py  eval_api_model.py  eval_baseline.py  flatten_eval_to_v3.py  gen_gap_eval.py  generate_questions.py  generate_traces.py  leaderboard_summary.py  spot_check.py  train_easy_only.py  verify_split.py
server/: app.py
snitch_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_doers.py  test_env.py  test_reward.py
training/: eval.py  plot_confusion.py  plot_results.py  train_grpo.py
