[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snitch-env"
version = "0.1.0"
description = "Scalable oversight environment for multi-agent auditing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "InfraNova" },
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "websockets>=12",
  "pydantic>=2.6",
  "numpy>=1.26",
  "torch>=2.2",
  "transformers>=4.40",
  "trl>=0.9",
  "datasets>=2.18",
  "anthropic>=0.30",
  "openai>=1.30",
  "matplotlib>=3.8",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["env*", "doers*", "training*"]
