[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snitch-env"
version = "1.0.0"
description = "Scalable oversight environment for LLM agent fleets"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "InfraNova" },
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "websockets>=12",
  "pydantic>=2.6",
  "numpy>=1.26",
  "python-dotenv>=1.0",
  "openai>=1.30",
  "openenv-core>=0.2.3",
]
[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "httpx>=0.27",
]
training = [
  "torch>=2.2",
  "transformers>=4.40",
  "trl>=0.12",
  "peft>=0.13",
  "datasets>=2.18",
  "matplotlib>=3.8",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["env*", "doers*"]

[tool.openenv]
env_id = "TheSnitch-v0"
entry_point = "server.app:app"